--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,14 @@ spring.mail.username=retsokhim2001@gmail.com
 spring.mail.password=mclc xdxz kkqt jelx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Config Amazon cloud storage
+aws.access.key=AKIAVRUVP7L2E6ZCDMRX
+aws.secret.key=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
+aws.s3.bucket=lang-net
+aws.region=ap-southeast-2
+aws.s3.endpointUrl=
+
+#Config file size
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
